// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type T = [("a" | "b")?];

=====================================output=====================================
type T = [("a" | "b")?];

================================================================================
`;

exports[`simple.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type X = [number, string?];

=====================================output=====================================
type X = [number, string?];

================================================================================
`;
